--- a/public/contacts.html
+++ b/public/contacts.html
@@ -814,52 +814,52 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="footer-contacts">
-              <div class="title">
+              <div class="footer-contacts-title">
                 Контакты
               </div>
-              <div class="time">
-                <div class="time-item">
+              <div class="footer-contacts-info">
+                <div class="footer-contacts-time">
                   ПН — ПТ: с 9.00 до 21.00
                 </div>
-                <div class="time-item">
+                <div class="footer-contacts-time">
                   СБ: с 9.00 до 19.00
                 </div>
-                <div class="time-item">
-                  ВС: выходной
+                <div class="footer-contacts-time">
+                  ВС: с 9.00 до 15.00
                 </div>
               </div>
-              <a href="tel:+375296869522" class="phone">
+              <a href="tel:+375296869522" class="footer-contacts-phone">
                 +375 (29) 686-95-22
               </a>
-              <div class="address">
+              <div class="footer-contacts-address">
                 Уручская, 7 (ст. м. «Уручье», Минск)
               </div>
-              <a href="mailto:ooodentopolis@gmail.com" class="email">
+              <a href="mailto:ooodentopolis@gmail.com" class="footer-contacts-email">
                 ooodentopolis@gmail.com
               </a>
-              <div class="links">
+              <div class="footer-contacts-links">
                 <a href="#">
-                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
                     <path d="M16.0001 11.8347C13.7064 11.8347 11.8345 13.7066 11.8345 16.0003C11.8345 18.2941 13.7064 20.166 16.0001 20.166C18.2939 20.166 20.1658 18.2941 20.1658 16.0003C20.1658 13.7066 18.2939 11.8347 16.0001 11.8347ZM28.4939 16.0003C28.4939 14.2753 28.5095 12.566 28.4126 10.8441C28.3158 8.84409 27.8595 7.06909 26.397 5.60659C24.9314 4.14097 23.1595 3.68784 21.1595 3.59097C19.4345 3.49409 17.7251 3.50972 16.0033 3.50972C14.2783 3.50972 12.5689 3.49409 10.847 3.59097C8.84702 3.68784 7.07202 4.14409 5.60952 5.60659C4.1439 7.07222 3.69077 8.84409 3.5939 10.8441C3.49702 12.5691 3.51265 14.2785 3.51265 16.0003C3.51265 17.7222 3.49702 19.4347 3.5939 21.1566C3.69077 23.1566 4.14702 24.9316 5.60952 26.3941C7.07515 27.8597 8.84702 28.3128 10.847 28.4097C12.572 28.5066 14.2814 28.491 16.0033 28.491C17.7283 28.491 19.4376 28.5066 21.1595 28.4097C23.1595 28.3128 24.9345 27.8566 26.397 26.3941C27.8626 24.9285 28.3158 23.1566 28.4126 21.1566C28.5126 19.4347 28.4939 17.7253 28.4939 16.0003ZM16.0001 22.4097C12.4533 22.4097 9.59077 19.5472 9.59077 16.0003C9.59077 12.4535 12.4533 9.59097 16.0001 9.59097C19.547 9.59097 22.4095 12.4535 22.4095 16.0003C22.4095 19.5472 19.547 22.4097 16.0001 22.4097ZM22.672 10.8253C21.8439 10.8253 21.1751 10.1566 21.1751 9.32847C21.1751 8.50034 21.8439 7.83159 22.672 7.83159C23.5001 7.83159 24.1689 8.50034 24.1689 9.32847C24.1691 9.52511 24.1306 9.71987 24.0555 9.90159C23.9803 10.0833 23.8701 10.2484 23.731 10.3875C23.592 10.5265 23.4269 10.6368 23.2451 10.7119C23.0634 10.787 22.8687 10.8256 22.672 10.8253Z" fill="white"/>
                   </svg>                    
                 </a>
                 <a href="#">
-                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
                     <path d="M4.08468 10.0137C5.19403 7.80465 6.89585 5.94767 8.99993 4.65028C11.104 3.35289 13.5274 2.66621 15.9993 2.66699C19.5927 2.66699 22.6113 3.98833 24.9193 6.14033L21.0967 9.96433C19.714 8.64299 17.9567 7.96966 15.9993 7.96966C12.526 7.96966 9.58602 10.3163 8.53935 13.467C8.27268 14.267 8.12068 15.1203 8.12068 16.0003C8.12068 16.8803 8.27268 17.7337 8.53935 18.5337C9.58735 21.6857 12.526 24.031 15.9993 24.031C17.7927 24.031 19.3193 23.5577 20.514 22.7577C21.2066 22.3017 21.7995 21.71 22.257 21.0183C22.7144 20.3267 23.0268 19.5495 23.1753 18.7337H15.9993V13.5763H28.5567C28.714 14.4483 28.7993 15.3577 28.7993 16.303C28.7993 20.3643 27.346 23.783 24.8233 26.103C22.618 28.1403 19.5993 29.3337 15.9993 29.3337C14.2482 29.3344 12.5141 28.99 10.8961 28.3201C9.27808 27.6503 7.80795 26.6682 6.5697 25.43C5.33144 24.1917 4.34934 22.7216 3.67953 21.1036C3.00971 19.4856 2.66532 17.7515 2.66602 16.0003C2.66602 13.8483 3.18068 11.8137 4.08468 10.0137Z" fill="white"/>
                   </svg>                                       
                 </a>
                 <a href="#">
-                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
                     <path d="M19.6633 4H16.1703C12.7383 4 10.0003 6.72 10.0003 12C10.0003 15.168 11.2373 17.504 13.7493 18.656L9.06125 27.488C8.90825 27.777 9.06125 28 9.30625 28H11.4813C11.6653 28 11.7883 27.936 11.8493 27.777L16.2503 19H17.5003L17.4923 27.777C17.4923 27.873 17.5843 28 17.7063 28H19.7553C19.9393 28 20.0003 27.904 20.0003 27.745V4.32C20.0003 4.096 19.8773 4 19.6633 4ZM17.5003 17H16.0003C14.5003 17 12.5003 15.84 12.5003 12C12.5003 7.999 14.1313 6 16.0003 6H17.5003V17Z" fill="white"/>
                   </svg>                                       
                 </a>
                 <a href="#">
-                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
                     <path d="M22.3044 18.4714C17.6106 18.4944 16.8513 21.3219 16.5983 23.7127L16.4832 24.7702H15.5398L15.4248 23.7127C15.1717 21.3219 14.3894 18.4944 9.85662 18.4714C9.09735 16.9081 8.77522 15.6437 8.77522 14.2184C8.77522 10.6553 11.6974 7.32184 16.023 7.32184C20.3486 7.32184 23.2247 10.6322 23.2247 14.2415C23.2248 15.6437 23.0867 16.9081 22.3044 18.4714ZM15.977 3C8.84431 3 3 8.83914 3 15.9885C3 23.161 8.84431 29 15.977 29C23.1787 29 29 23.161 29 15.9885C29 8.83915 23.1787 3 15.977 3Z" fill="white"/>
                   </svg>                                      
                 </a>
                 <a href="#">
-                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
                     <path d="M16 28C22.6274 28 28 22.6274 28 16C28 9.37258 22.6274 4 16 4C9.37258 4 4 9.37258 4 16C4 22.6274 9.37258 28 16 28Z" stroke="white" stroke-width="2.66667" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M16 10.667V21.3337" stroke="white" stroke-width="4.52174" stroke-linecap="square" stroke-linejoin="round"/>
                     <path d="M10.666 16H21.3327" stroke="white" stroke-width="4.52174" stroke-linecap="square" stroke-linejoin="round"/>
@@ -870,9 +870,9 @@
           </div>
           <div class="col-lg-4">
             <div class="footer-main">
-              <img src="./images/logo.png" alt="logo" class="logo" loading="lazy">
+              <img src="./images/logo.png" alt="logo" class="footer-main-logo" loading="lazy">
               <button class="ui-btn">Записаться</button>
-              <div class="socials">
+              <div class="footer-main-socials">
                 <a href="#">
                   <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
                     <path d="M16.0013 2.66699C23.3653 2.66699 29.3347 8.63633 29.3347 16.0003C29.3347 23.3643 23.3653 29.3337 16.0013 29.3337C13.645 29.3375 11.3302 28.7139 9.29465 27.527L2.67332 29.3337L4.47599 22.7097C3.28811 20.6735 2.66405 18.3577 2.66799 16.0003C2.66799 8.63633 8.63732 2.66699 16.0013 2.66699ZM11.4573 9.73366L11.1907 9.74433C11.018 9.75484 10.8493 9.80019 10.6947 9.87766C10.55 9.95957 10.418 10.062 10.3027 10.1817C10.1427 10.3323 10.052 10.463 9.95465 10.5897C9.46148 11.2309 9.19595 12.0181 9.19999 12.827C9.20265 13.4803 9.37332 14.1163 9.63999 14.711C10.1853 15.9137 11.0827 17.187 12.2667 18.367C12.552 18.651 12.832 18.9363 13.1333 19.2017C14.6045 20.4969 16.3577 21.431 18.2533 21.9297L19.0107 22.0457C19.2573 22.059 19.504 22.0403 19.752 22.0283C20.1403 22.0083 20.5195 21.9031 20.8627 21.7203C21.0373 21.6304 21.2077 21.5325 21.3733 21.427C21.3733 21.427 21.4307 21.3897 21.54 21.307C21.72 21.1737 21.8307 21.079 21.98 20.923C22.0907 20.8083 22.1867 20.6737 22.26 20.5203C22.364 20.303 22.468 19.8883 22.5107 19.543C22.5427 19.279 22.5333 19.135 22.5293 19.0457C22.524 18.903 22.4053 18.755 22.276 18.6923L21.5 18.3443C21.5 18.3443 20.34 17.839 19.6307 17.5163C19.5564 17.4839 19.4769 17.4654 19.396 17.4617C19.3048 17.4523 19.2126 17.4626 19.1257 17.4918C19.0387 17.521 18.9591 17.5684 18.892 17.631C18.8853 17.6283 18.796 17.7043 17.832 18.8723C17.7767 18.9467 17.7004 19.0029 17.6131 19.0337C17.5257 19.0646 17.4311 19.0688 17.3413 19.0457C17.2545 19.0224 17.1694 18.993 17.0867 18.9577C16.9213 18.8883 16.864 18.8617 16.7507 18.8137C15.9854 18.4797 15.2769 18.0285 14.6507 17.4763C14.4827 17.3297 14.3267 17.1697 14.1667 17.015C13.6421 16.5126 13.185 15.9443 12.8067 15.3243L12.728 15.1977C12.6715 15.1125 12.6258 15.0207 12.592 14.9243C12.5413 14.7283 12.6733 14.571 12.6733 14.571C12.6733 14.571 12.9973 14.2163 13.148 14.0243C13.2947 13.8377 13.4187 13.6563 13.4987 13.527C13.656 13.2737 13.7053 13.0137 13.6227 12.8123C13.2493 11.9003 12.8627 10.9923 12.4653 10.091C12.3867 9.91233 12.1533 9.78433 11.9413 9.75899C11.8693 9.75099 11.7973 9.74299 11.7253 9.73766C11.5463 9.72876 11.3668 9.73054 11.188 9.74299L11.456 9.73233L11.4573 9.73366Z" fill="white"/>
@@ -884,7 +884,7 @@
                   </svg>                                     
                 </a>
                 <a href="#">
-                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
                     <path d="M16.0002 2C8.26804 2 2 8.26804 2 16.0002C2 23.7324 8.26804 30.0004 16.0002 30.0004C23.7324 30.0004 30.0004 23.7324 30.0004 16.0002C30.0004 8.26804 23.7324 2 16.0002 2Z" fill="white"/>
                     <path d="M22.8145 10.0542L20.3138 22.6619C20.3138 22.6619 19.9641 23.5363 19.0024 23.1166L13.2319 18.6925L11.1336 17.6784L7.60143 16.4892C7.60143 16.4892 7.05936 16.297 7.00686 15.8773C6.95436 15.4576 7.61893 15.2303 7.61893 15.2303L21.6603 9.72212C21.6603 9.72212 22.8144 9.21505 22.8144 10.0544" fill="#4C4D6E"/>
                     <path d="M12.7877 22.5209C12.7877 22.5209 12.6192 22.5052 12.4092 21.8406C12.1996 21.1762 11.1328 17.679 11.1328 17.679L19.6137 12.2933C19.6137 12.2933 20.1033 11.996 20.0858 12.2933C20.0858 12.2933 20.1732 12.3458 19.9108 12.5905C19.6487 12.8354 13.2487 18.5883 13.2487 18.5883" fill="white"/>
@@ -901,12 +901,12 @@
           </div>
           <div class="col-lg-4">
             <div class="footer-services">
-              <div class="title">
+              <div class="footer-services-title">
                 популярные услуги
               </div>
               <ul>
                 <li>
-                  <a href="#" class="service">
+                  <a href="#">
                     Имплантация зубов
                   </a>
                 </li>
@@ -939,7 +939,7 @@
             </div>
           </div>
         </div>
-        <div class="copy">
+        <div class="footer-copy">
           © 2023 Dentopolis.by
         </div>
       </div>
